@@ -16,6 +16,7 @@ context => parkedcalls		; Which context parked calls are in
 ;parkedplay = caller		; Who to play the courtesy tone to when picking up a parked call
 				; one of: parked, caller, both  (default is caller)
 ;parkedcalltransfers = yes      ; Enables or disables DTMF based transfers when picking up a parked call
+;parkedcallreparking = yes      ; Enables or disables DTMF based parking when picking up a parked call
 ;adsipark = yes			; if you want ADSI parking announcements
 ;findslot => next		; Continue to the 'next' free parking space. 
 				; Defaults to 'first' available
