@@ -59,6 +59,7 @@ Changes since Asterisk 1.4-beta was branched:
   * Added 'E' and 'V' commands to ExternalIVR.
   * Added 'DBDel' and 'DBDelTree' manager commands.
   * Added 'o' and 'X' options to Chanspy.
+  * Added the parkedcallreparking option to features.conf
 
 AMI - The manager (TCP/TLS/HTTP)
 --------------------------------
